<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newsapp.ui.BBC.HomeFragment"
        android:label="@string/bbc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newsapp.ui.CNN.GalleryFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newsapp.ui.Fox.SlideshowFragment"
        android:label="@string/fox"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/hindu"
        android:name="com.example.newsapp.fragments.HinduFragment"
        android:label="@string/hindu"
        tools:layout="@layout/fragment_hindu" />
    <fragment
        android:id="@+id/sky"
        android:name="com.example.newsapp.fragments.SkyNewsFragment"
        android:label="@string/sky"
        tools:layout="@layout/fragment_sky_news" />
</navigation>