<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bbc"
            android:title="@string/bbc"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/cnn"
            android:title="@string/cnn"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/fox"
            android:title="@string/fox"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/sky"
            android:icon="@drawable/sky_logo"
            android:title="@string/sky"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/hindu"
            android:icon="@drawable/hindus"
            android:title="@string/hindu"
            android:menuCategory="secondary"/>

    </group>

    <item android:title="Upcoming..."
        android:menuCategory="secondary">
        <menu>
            <item
                android:id="@+id/ny"
                android:icon="@drawable/newyork"
                android:title="New York Times" />
        </menu>


    </item>

</menu>